# primus-ccop-fine-tuning

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: python-developer.md
.claude/commands/: git.md
.claude/skills/artifact-generator/: SKILL.md
.claude/skills/artifact-generator/assets/: implementation-plan-template.md  user-story-template.md
.claude/skills/double-check/: SKILL.md
.claude/skills/local-deployment/: SKILL.md
.claude/skills/technical-discussion/: SKILL.md
.claude/skills/testing/: SKILL.md
ccop-official/references/: cybersecurity-act-208-part3.md
ccop-official/supplementary/: Security_By_Design_Framework_Checklist.xlsx
colab/: 01_phase1_setup.ipynb
config/environment/: development.yaml  production.yaml
docs/: deployment-strategy.md  vs-code-setup.md
docs/phase-1/: architecture.md  domain-specific-compliance-models-analysis.md  ph1-implementation-plan.md  phase1-architecture-diagram.html  phase1-infrastructure-setup.md  phase1-user-story.md  related-works-literature-review.md
docs/phase-2/: GROUND_TRUTH_ESTABLISHMENT.md  benchmarks-updated.md  ground_truth_establishment_flow.html  phase2-baseline-evaluation.md  phase2-baseline-screening-architecture.html  scoring-methodology-updated.md  scoring-methodology.md  tier-system-complete-overview.md
ground-truth/phase-2/: update_test_schema.py  update_test_schema_v2.py
ground-truth/phase-2/archive/: README.md
ground-truth/phase-2/archive/test-cases-old-new/: B18_ADDITION_SUMMARY.md  README.md  TEST_SUITE_COMPLETION_REPORT.md  b03_conditional_compliance_reasoning.jsonl  b09_risk_identification_accuracy.jsonl  (+4 more)
ground-truth/phase-2/expert-validation/: CCoP_Test_Cases_Expert_Review.xlsx  expert_validation_review.md  generate_expert_review_excel.py  ~$CCoP_Test_Cases_Expert_Review.xlsx
ground-truth/phase-2/test-suite/: CONSOLIDATION_SUMMARY.md  CORRUPTION_FINDINGS.md  DATASET_DESCRIPTION.md  DATASET_SUMMARY.md  DATASET_UPDATES_REQUIRED.md  README.md  b01_ccop_applicability_scope.jsonl  b02_compliance_classification_accuracy.jsonl  b04_it_ot_classification.jsonl  b05_control_requirement_comprehension.jsonl  b06_control_intent_understanding.jsonl  b07_gap_identification_quality.jsonl  b08_gap_prioritisation.jsonl  b09_risk_identification_accuracy.jsonl  b10_risk_justification_coherence.jsonl  b11_risk_severity_assessment.jsonl  b12_audit_perspective_alignment.jsonl  b14_remediation_recommendation_quality.jsonl  b15_remediation_feasibility.jsonl  b16_residual_risk_awareness.jsonl  b17_policy_vs_practice_distinction.jsonl  b18_responsibility_attribution_singapore.jsonl  b21_hallucination_rate.jsonl  investigate_corruption.py  validate_schema.py  verify_all_files.py
report/term1-end/: MDAIE-AETher-FineTuning-LLM-CCoP-Sagar-1010736-20251219.pptx  Primus-Fine-Tuning-CCOP2-SG-T1E-v1.0-SagarPratapSingh-1010736.docx  Primus-Fine-Tuning-CCOP2-SG-T1E-v1.0-SagarPratapSingh-1010736.docx.md
report/term1-mid/: Primus-Fine-Tuning-CCOP2-SG-v2.0-SagarPratapSingh-1010736.docx  Primus-Fine-Tuning-CCOP2-SG-v2.0-SagarPratapSingh-1010736.md
research/archived-20251104/: Primus-Fine-Tuning-CCOP2-SG.docx  ccop-analysis-it-ot-breakdown.md  ccop-fine-tuned-llm-benchmarks.md  ccop-project-implementation-guide.md  cybersecurity-standards-comparison.md  final.txt  fine-tuning-methodology-ccop-llm.md  fine-tuning-vs-rag-for-cybersecurity.md  llama-primus-reasoning-opportunities.md  llm-models-comparative-analysis.md  primus-fine-tuning-sg-ccop-project-report-term1.md  project-phases-objectives-kpi.md  project-report.md  project-writeup-primus-ccop-v1.md  security-compliance-cicd-automation.md  sg-cybersecurity-standards-analysis.md
scripts/: setup_environment.py
src/: __init__.py  pyproject.toml
src/application/: __init__.py
src/application/dtos/: evaluation_request_dto.py  evaluation_result_dto.py  test_case_dto.py
src/application/ports/input/: i_evaluate_model_use_case.py  i_generate_report_use_case.py  i_setup_model_use_case.py
src/application/ports/output/: i_logger.py  i_model_converter.py  i_model_gateway.py  i_result_repository.py  i_test_case_repository.py
src/application/use_cases/: evaluate_model.py  generate_report.py  setup_model.py
src/config/: .env.example
src/docs/: option-a-implementation-summary.md  phase2-scoring-implementation-plan.md  phase2-threshold-implementation.md  setup-instructions.md  tier-system-implementation-plan.md
src/domain/: __init__.py
src/domain/entities/: benchmark.py  evaluation_result.py  model_response.py  test_case.py
src/domain/exceptions/: evaluation_error.py  validation_error.py
src/domain/services/: benchmark_validator.py  human_validation_service.py  llm_judge_service.py  scoring_service.py  semantic_similarity_service.py
src/domain/value_objects/: benchmark_type.py  ccop_section.py  difficulty_level.py  evaluation_category.py  evaluation_metric.py  evaluation_tier.py
src/infrastructure/: __init__.py
src/infrastructure/adapters/converters/: gguf_converter.py
src/infrastructure/adapters/logging/: console_logger.py  structlog_adapter.py
src/infrastructure/adapters/repositories/: json_result_repository.py  jsonl_test_case_repository.py
src/infrastructure/config/: container.py  settings.py
src/presentation/: __init__.py
src/presentation/cli/: main.py
src/presentation/cli/commands/: evaluate.py  report.py  setup.py
src/scripts/: convert_to_gguf.sh  generate_missing_key_facts.py  setup_ollama.sh
src/tests/: __init__.py
src/tests/application/use_cases/: test_evaluate_model_metadata.py
src/tests/domain/services/: test_scoring_service_option_a.py
src/tests/infrastructure/adapters/repositories/: test_json_result_repository.py
tests/: __init__.py  conftest.py  test_e2e_evaluation.py  test_model_response.py  test_repository_basics.py
tests/domain/services/: test_human_validation_service.py  test_llm_judge_service.py  test_semantic_similarity_service.py
tests/fixtures/: b01_test_sample.jsonl
tests/integration/: test_tier2_semantic_similarity_e2e.py  test_tier3_llm_judge_e2e.py
(+59 files in other folders)
