[tool.poetry]
name = "studio-ssdlc"
version = "0.1.0"
description = "Fine-Tuning Language Model on CCoP 2.0 Standards for Critical Information Infrastructure"
authors = ["Sagar Pratap Singh <sagarpratapsingh@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9,<3.12"

# Core ML/AI Libraries
torch = {version = "^2.1.0", source = "pytorch"}
transformers = "^4.36.0"
accelerate = "^0.26.0"
tokenizers = "^0.15.0"
datasets = "^2.16.0"

# Fine-tuning Libraries (QLoRA/PEFT)
peft = "^0.7.0"
bitsandbytes = "^0.41.0"
trl = "^0.7.0"

# Data Processing
numpy = "^1.24.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"

# API Integration
openai = "^1.5.0"
anthropic = "^0.7.0"
requests = "^2.31.0"
httpx = "^0.25.0"

# Google Cloud Integration
google-api-python-client = "^2.108.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"
google-cloud-storage = "^2.10.0"
PyDrive2 = "^1.15.0"

# Configuration and Utilities
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
tqdm = "^4.66.0"
rich = "^13.7.0"
typer = "^0.9.0"

# Jupyter and Notebook Support
jupyter = "^1.0.0"
jupyterlab = "^4.0.0"
nbformat = "^5.9.0"
nbconvert = "^7.14.0"
ipywidgets = "^8.1.0"

[tool.poetry.group.dev.dependencies]
# Development Tools
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.6.0"

# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

# Documentation
mkdocs = "^1.5.0"
mkdocs-material = "^9.4.0"
mkdocstrings = "^0.24.0"

# Type Checking
types-PyYAML = "^6.0.12"
types-requests = "^2.31.0"

[tool.poetry.scripts]
ccop-benchmark = "src.cli.benchmark:app"
ccop-deploy = "src.cli.deploy:app"
ccop-data = "src.cli.data:app"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black Configuration
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort Configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]
known_third_party = ["torch", "transformers", "datasets", "peft"]

# MyPy Configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "datasets.*",
    "peft.*",
    "trl.*",
    "bitsandbytes.*",
    "google.*",
    "PyDrive2.*",
]
ignore_missing_imports = true

# Pytest Configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage Configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]